# questr

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/backend/: ARCHITECTURE.md  coding-guidelines.md  shell.md
hurl/: README.md
hurl/auth/: auth-flow.hurl  signup.hurl
migrations/: env.py
migrations/versions/: 001_add_users_and_email_verifications.py  b2f0b1a8ca4d_add_sessions_table_and_user_timestamps.py
questr/: __main__.py  factory.py  lifespan.py  settings.py  shell.py
questr/api/: router.py
questr/app/: dependencies.py  middleware.py
questr/common/: enums.py  exceptions.py  rate_limiter.py
questr/common/services/: email_service.py
questr/common/value_objects/: email.py
questr/domains/hello/: api.py  service.py
questr/domains/users/: api.py  (+2 more)
questr/hello/: domain.py  router.py  schemas.py  service.py
questr/infrastructure/: email.py  login_rate_limiter.py  rate_limiter.py  redis.py
questr/orm/: models.py
questr/users/: dependencies.py  domain.py  repository.py  router.py  schemas.py  service.py
scripts/: lint_custom.py  pg_cli.sh  pg_dump.sh  pg_restore.sh
scripts/curl/: signup.sh
scripts/fast_shell/: __init__.py  user_orm_sandbox.py
tests/: conftest.py
tests/app/: test_middleware.py
tests/behavior/: conftest.py  test_hello.py  test_login.py  test_signup.py
tests/common/: test_exceptions.py
tests/hello/: test_router.py
tests/infrastructure/: test_login_rate_limiter.py
tests/users/: conftest.py  factories.py  test_domain.py  test_repository.py  test_router.py  test_service.py
(+18 files in other folders)
